export const TEST_IDS = {
  auth: {
    login: {
      heading: "auth.login.heading",
      signInButton: "auth.login.signInButton",
      usernameField: "auth.login.usernameField",
      passwordField: "auth.login.passwordField",
    },
  },
  main: {
    heading: "main.heading",
  },
}
